--- a/haliax_demo.ipynb
+++ b/haliax_demo.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import haliax as hax  # this amuses me more than it should\n",
     "from transformers import AutoTokenizer\n",
@@ -34,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,27 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NamedArray(array=Array([0, 1, 2, 3], dtype=int32), axes=(Axis(name='layer', size=4),))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "layer_indices"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,23 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NamedArray(array=Array([0, 1, 2, 3, 4], dtype=int32), axes=(Axis(name='M', size=5),))\n",
-      "NamedArray(array=Array([0, 1, 2, 3], dtype=int32), axes=(Axis(name='N', size=4),))\n",
-      "(Axis(name='N', size=4), Axis(name='M', size=5))\n",
-      "[[ 0  0  0  0  0]\n",
-      " [ 0  1  2  3  4]\n",
-      " [ 0  2  4  6  8]\n",
-      " [ 0  3  6  9 12]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "M = hax.Axis(\"M\", 5)\n",
     "N = hax.Axis(\"N\", 4)\n",
@@ -150,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,32 +124,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "weight = hax.random.normal(k_w, (Embed, Mlp))\n",
-    "word_embedding = hax.random.normal(k_e, (Vocab, Embed)) # (column, row)"
+    "word_embedding = hax.random.normal(k_e, (Vocab, Embed)) # (column, row)\n",
+    "big_embed = hax.dot(\"embed\", word_embedding, weight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batched_weight = hax.random.normal(k_w, (Batch, Embed, Mlp))\n",
+    "batched_embed = hax.random.normal(k_e, (Batch, Vocab, Embed))\n",
+    "\n",
+    "batched_big_embed = hax.dot(\"embed\", batched_embed, batched_weight)\n",
+    "\n",
+    "assert batched_big_embed.axes == (Batch, Vocab, Mlp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hax' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m help(hax\u001b[39m.\u001b[39mnn\u001b[39m.\u001b[39mEmbedding\u001b[39m.\u001b[39minit)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hax' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from jax.sharding import Mesh, NamedSharding, PartitionSpec\n",
+    "import numpy as onp\n",
+    "\n",
+    "mesh = Mesh(onp.array(jax.devices()), (\"data\",))\n",
+    "print(jax.devices())\n",
+    "\n",
+    "# quick little utility to visualize meshes themselves\n",
+    "# this piggybacks on a nice visualization in Jax.\n",
+    "def visualize_mesh(mesh):\n",
+    "  arr = jnp.zeros(mesh.devices.shape)\n",
+    "  arr = jax.device_put(arr, NamedSharding(mesh, PartitionSpec(*mesh.axis_names)))\n",
+    "  jax.debug.visualize_array_sharding(arr)\n",
+    "\n",
+    "visualize_mesh(mesh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "Batch = hax.Axis(\"batch\", 128)\n",
+    "Feature = hax.Axis(\"feature\", 64)\n",
+    "\n",
+    "x = hax.random.uniform(PRNGKey(0), (Batch, Feature))\n",
+    "y = hax.random.uniform(PRNGKey(1), Batch)\n",
+    "\n",
+    "def mse(pred, target):\n",
+    "    return hax.mean((pred - target) * (pred - target), axis=Batch)\n",
+    "\n",
+    "W = hax.random.uniform(PRNGKey(2), (Feature,))\n",
+    "\n",
+    "y_pred = hax.dot(Feature, x, W)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse(y_pred, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(hax.dot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = hax.random.uniform(PRNGKey(0), (Pos, Key))\n",
+    "key = hax.random.uniform(PRNGKey(1), (Key, KPos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KPos = Pos.alias(\"key_position\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax.numpy as jnp\n",
+    "jnp.concatenate(jnp.array([]), jnp.array([1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Axis(name='vocab', size=50257), Axis(name='embed', size=32))"
+       "typing.Union[jax.Array, numpy.ndarray, numpy.bool_, numpy.number, typing.Iterable[ForwardRef('ArrayTree')], typing.Mapping[typing.Any, ForwardRef('ArrayTree')]]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "word_embedding.axes"
+    "import optax\n",
+    "optax.OptState"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'optax' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mtype\u001b[39m(optax\u001b[39m.\u001b[39mlinear_schedule)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'optax' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Policy(param_dtype=<class 'jax.numpy.float32'>, compute_dtype=<class 'jax.numpy.float32'>, output_dtype=<class 'jax.numpy.float32'>)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jmp.get_policy(\"f32\")"
    ]
   },
   {
